fixed too dark bg on menu rollover

--- a/less/casper.less
+++ b/less/casper.less
@@ -218,7 +218,7 @@ td code {
         color: #222;
     }
     .nav .dropdown-menu li a:hover {
-        background: #444;
+        background: #ddd;
     }
 }
 .page-header {
